<resources>

    <string name="app_name"> Health Connect </string>
    <string name="tvTagLine">Care, Connect and Consult</string>
    <string name="imageViewConnect">Connect</string>

    <string name="buttonAsDoctor">Doctor</string>
    <string name="buttonAsPatient">Patient</string>
    <string name="buttonAsAdmin">Admin</string>
    <string name="tvContinue">Continue as..</string>

    <string name="editTextEmailAddress">Email Address</string>
    <string name="editTextPassword">Password</string>
    <string name="editTextPhone">Contact Number</string>
    <string name="editTextFirstName">First Name</string>
    <string name="editTextLastName">Last Name</string>
    <string name="editTextBirthDate">Date Of Birth</string>


    <string name="tvLoginHeading">Login</string>
    <string name="tvRegisterHeading">Register</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonRegister">Register</string>
    <string name="tvClickToRegister">Not Registered Yet? Click here.</string>
    <string name="tvClickToLogin">Already Registered? Click here.</string>


    <!-- Doctor NavBar Icons -->
    <string name="iconDocProfile">Doctor Profile</string>
    <string name="iconAppointments">Appointments</string>
    <string name="iconPatientRecords">Patient Records</string>

    <!-- Patient NavBar Icons -->
    <string name="iconPatientProfile">Patient Profile</string>
    <string name="iconPatientAppointments">Patient Appointments</string>
    <string name="iconMedicalHistory">Medical History</string>

    <!-- Appointment strings -->
    <string name="tvAppointmentsHeading">Appointments</string>
    <string name="editTextApptDate">Choose an Appointment Date:</string>
    <string name="editTextPatientID">Patient ID</string>
    <string name="editTextPatientName">Patient Name</string>
    <string name="editTextAppointmentDate">Appointment Date</string>
    <string name="editTextDiagnosis">Diagnosis</string>
    <string name="editTextTreatment">Treatment</string>
    <string name="editTextMedication">Medication</string>

    <!-- Adding New Record strings -->
    <string name="textViewAddPatientRecord">Add new Record</string>
    <string name="buttonAsOldPatient">Old Patient</string>
    <string name="buttonAsNewPatient">New Patient</string>
    <string name="textViewAddNewAppointment">New Appointment</string>
    <string name="textViewAccountDetails">Account Details</string>

    <!-- To add Account Details -->
    <string name="textViewDoctorName" />
    <string name="textViewContactNumber" />
    <string name="textViewEmailAddress" />
    <string name="textViewDOB" />
    <string name="textViewPatientName" />
    <string name="tvPatientName" />
    <string name="tvAppointmentDate" />
    <string name="tvDiagnosis" />
    <string name="tvTreatment" />
    <string name="tvRecordsHeading">Patient Records</string>


    <string name="buttonLogOut">Log Out</string>
    <string name="tvMedicalHistory">MedicalHistory</string>

    <string name="buttonEditRecord">Edit Record</string>
    <string name="tvEditRecord">Edit Record</string>
    <string name="buttonSaveChanges">Save Changes</string>
    <string name="tvMedication" />
    <string name="buttonEditProfile">Edit</string>
    <string name="tvEditProfile">Edit Profile</string>
    <string name="textViewEditOnlyPhone">Patient is not allowed to edit any ther personal details except Contact Number.:</string>


</resources>