<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvPatientName"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/tvPatientName"
        android:textAlignment="center"
        android:textColor="@color/primaryBlue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAppointmentDate"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:text="@string/tvAppointmentDate"
        android:textStyle="bold"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/tvDiagnosis"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:text="@string/tvDiagnosis"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvTreatment"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:text="@string/tvTreatment"
        android:textSize="16sp"/>
</LinearLayout>