<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item

        android:icon="@drawable/icon_doc_profile"
        android:title="@string/iconDocProfile"
        android:id="@+id/navToDocProfile"
        android:onClick="openDocProfile"
        android:visible="true" />
    <item

        android:id="@+id/navToAppointments"
        android:icon="@drawable/icon_appointments"
        android:title="@string/iconAppointments"
        android:onClick="openAppointments"
        android:visible="true" />
    <item
        android:id="@+id/navToPatientRecords"
        android:icon="@drawable/icon_patient_records"
        android:title="@string/iconPatientRecords"
        android:onClick="openPatientRecords"
        android:visible="true" />

</menu>