<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseGrey"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewConnect"
        android:layout_width="280dp"
        android:layout_height="92dp"
        android:contentDescription="@string/imageViewConnect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        app:srcCompat="@drawable/splash_connect" />

    <TextView
        android:id="@+id/tvTagLine"
        android:layout_width="286dp"
        android:layout_height="30dp"
        android:text="@string/tvTagLine"
        android:textAlignment="center"
        android:textColor="@color/primaryBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewConnect"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/rounded_pink_frames"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonAsDoctor"
        android:layout_width="240dp"
        android:layout_height="90dp"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/montserrat"
        android:text="@string/buttonAsDoctor"
        android:textColor="@color/primaryButtonText"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar3"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/buttonAsPatient"
        android:layout_width="240dp"
        android:layout_height="90dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/montserrat"
        android:text="@string/buttonAsPatient"
        android:textColor="@color/primaryButtonText"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAsDoctor"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonAsAdmin"
        android:layout_width="240dp"
        android:layout_height="90dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/montserrat"
        android:text="@string/buttonAsAdmin"
        android:textColor="@color/primaryButtonText"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAsPatient"
        app:layout_constraintVertical_bias="0.0" />

>>>>>>> 7d3d790f888aa955affac8adcfbcf8be86e1fe21
    <TextView
        android:id="@+id/tvContinue"
        android:layout_width="165dp"
        android:layout_height="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tvContinue"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonAsDoctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar3"
        app:layout_constraintVertical_bias="0.96" />
</androidx.constraintlayout.widget.ConstraintLayout>