<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar3"
        android:layout_width="410dp"
        android:layout_height="436dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/rounded_pink_frames"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvRegisterHeading"
        android:layout_width="286dp"
        android:layout_height="82dp"
        android:fontFamily="@font/montserrat"

        android:text="@string/tvRegisterHeading"
        android:textAlignment="center"
        android:textColor="@color/primaryButtonText"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/tvTagLine"
        android:layout_width="286dp"
        android:layout_height="30dp"
        android:layout_marginBottom="440dp"
        android:text="@string/tvTagLine"
        android:textAlignment="center"
        android:textColor="@color/primaryBlue"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginHeading"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editTextEmail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/primaryBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editTextPassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/primaryBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvClickToLogin"
        android:layout_width="300dp"
        android:layout_height="22dp"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:text="@string/tvClickToLogin"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.735" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="49dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editTextFirstName"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/primaryBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextLastName"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar3"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editTextLastName"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/primaryBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar3"
        app:layout_constraintVertical_bias="0.151" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editTextPhone"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/primaryBlue"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="304dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_blue_frames"
        android:fontFamily="@font/montserrat"
        android:text="@string/buttonRegister"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.062" />


</androidx.constraintlayout.widget.ConstraintLayout>