<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseGrey"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/tvTagLine"
        android:layout_width="286dp"
        android:layout_height="30dp"
        android:text="@string/tvTagLine"
        android:textAlignment="center"
        android:textColor="@color/primaryBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginHeading"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/rounded_pink_frames"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="231dp"
        android:layout_height="63dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editTextEmailAddress"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/primaryBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar3"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar3"
        app:layout_constraintVertical_bias="0.113" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="229dp"
        android:layout_height="63dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editTextPassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/primaryBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/tvClickToRegister"
        android:layout_width="264dp"
        android:layout_height="37dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="48dp"
        android:clickable="true"
        android:text="@string/tvClickToRegister"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.967" />

    <TextView
        android:id="@+id/tvLoginHeading"
        android:layout_width="286dp"
        android:layout_height="82dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/tvLoginHeading"
        android:textAlignment="center"
        android:textColor="@color/primaryButtonText"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="239dp"
        android:layout_height="69dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_blue_frames"
        android:fontFamily="@font/montserrat"
        android:text="@string/buttonLogin"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvClickToRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>