<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditRecordActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar3"
        android:layout_width="410dp"
        android:layout_height="0dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/rounded_blue_frames"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvEditRecord"
        android:layout_width="317dp"
        android:layout_height="77dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/tvEditRecord"
        android:textAlignment="center"
        android:textColor="@color/primaryButtonText"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/docNavBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <EditText
        android:id="@+id/editTextTreatment"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editTextTreatment"
        android:inputType="textShortMessage"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/primaryBlue"
        app:layout_constraintBottom_toTopOf="@+id/docNavBar"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar3"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDiagnosis"
        app:layout_constraintVertical_bias="0.088" />

    <EditText
        android:id="@+id/editTextMedication"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editTextMedication"
        android:inputType="textShortMessage"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/primaryBlue"
        app:layout_constraintBottom_toTopOf="@+id/docNavBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTreatment"
        app:layout_constraintVertical_bias="0.376" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/docNavBar"
        android:layout_width="411dp"
        android:layout_height="80dp"
        android:background="@color/secondaryRed"
        app:itemBackground="@color/secondaryRed"
        app:itemIconSize="60dp"
        app:itemIconTint="@color/nav_color"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/doc_nav_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <EditText
        android:id="@+id/editTextDiagnosis"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editTextDiagnosis"
        android:inputType="textShortMessage"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/primaryBlue"
        app:layout_constraintBottom_toTopOf="@+id/docNavBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar3"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/buttonSaveChanges"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/montserrat"
        android:text="@string/buttonSaveChanges"
        android:textColor="@color/primaryButtonText"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/docNavBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMedication"
        app:layout_constraintVertical_bias="0.411" />
</androidx.constraintlayout.widget.ConstraintLayout>